--- a/hobilerim.html
+++ b/hobilerim.html
@@ -14,7 +14,7 @@
           <li><a href=https://www.instagram.com/caycicegi/>Fotoğraf çekme</a></li>
           
         </ol>
-     <a href="yedek.html"> geri</a>
+     <a href="index.html"> geri</a>
 
 
 
