--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         ><title> ℋatice's Personal Site </title>
     </head>
-    <body>
+    <body style="background-color:rgb(222, 230, 232)">
       <table cellspacing="20">
         <tr>
           <td><img src="hatice_400x400-modified.jpg"></td>
