--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
-
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         ><title> ℋatice's Personal Site </title>
+        <style>
+          body {
+            background-color: #ecfefe;"
+
+          }
+
+          hr{
+            
+            border-style:none;
+            border-top-style: dotted;
+            border-color:rgb(105, 111, 111);
+            border-width: 5px;
+            width: 10%;
+          }
+        </style>
     </head>
-   <body style="background-color: hwb(180 86% 4%);">
+    <body >
       <table cellspacing="20">
         <tr>
           <td><img src="hatice_400x400-modified.jpg"></td>
@@ -92,84 +106,6 @@
     
     </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
