--- a/index.html
+++ b/index.html
@@ -3,21 +3,8 @@
     <head>
         <meta charset="utf-8">
         ><title> ℋatice's Personal Site </title>
-        <style>
-          body {
-            background-color: #ecfefe;"
-
-          }
-
-          hr{
-            
-            border-style:none;
-            border-top-style: dotted;
-            border-color:rgb(105, 111, 111);
-            border-width: 5px;
-            width: 10%;
-          }
-        </style>
+       <link rel="stylesheet" href="css/styles.css">
+   
     </head>
     <body >
       <table cellspacing="20">
@@ -106,6 +93,29 @@
     
     </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
